// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildAutoPhasePrompt > combines retry + discuss notes + steps in one prompt 1`] = `
"You are part of a tool that helps the user build a project incrementally.
An **auto session** is in progress — you are to implement the whole phase in one pass.

# Project
# Můj projekt
Stavím nástroj X pro Y.

# Retry (iteration 3)
In one of the previous iterations not all steps were finished. What is already done (or skipped) you'll see in the "Steps" section below — focus on the remaining ones. You'll find the previous report in \`.mini/run/phase-10.prev.md\` — read it so you know where the previous attempt ended and what it ran into. The new report (see below) overwrites the previous one.

# Current phase
**Phase 10: Vše dohromady**
Goal: třetí pokus s poznámkami

Steps (a guide for the work — do not edit them in any file, they only serve as the plan and reference names for the report):
- [done] hotový krok
- [todo] zbývající krok

# Phase notes (from discussion)
## Záměr
shrnutí z diskuze

# Your task
Implement all remaining steps so that the phase meets its goal. The steps above are a guide for the work — the order and granularity are up to you, and do not edit the files in \`.mini/state.json\` by hand. The user takes care of moving the phase status and the final step statuses via \`mini done\`, based on the report you write (see below).

Read the files yourself as needed. You work in acceptEdits mode, so you can edit without asking.

If you hit a **real** decision along the way — a concrete alternative weighed and **rejected**, not obvious from the code later — at the end tell the user to run \`/mini:decision\` (before \`/mini:done\`) to record the *why*. Don't write the ADR yourself; most phases have no such crossroads.

On parallelizing tool calls: (1) run fragile/stateful commands on their own — anything touching a server (start/stop, kill, pkill, background jobs) must not share a batch with other work, so a failure or hang is isolated; (2) independent reads and queries can go in parallel — that is safe and saves time; (3) keep dependent steps sequential — when you need one command’s output for the next (e.g. an exact step name), wait for it before continuing.

# Tracking step progress
As soon as you finish one step, mark it done **immediately** (before you start the next one):

\`\`\`
mini do --apply --step-done "<exact step name from the Steps section>"
\`\`\`

Copy the name character by character from the "Steps" section above. If the session crashes, the state will then show how far you got. Write the final report at the end (see below) regardless — tracking progress does not replace it.


# Report at the end of the session
Before you end the session, **write via the Write tool** a report into the file \`.mini/run/phase-010.md\`. The report has two parts:

1) **YAML front matter** with machine-readable statuses. This part is parsed, so the structure must be exact. Rules:
   - the step names in \`steps[].title\` MUST match the names in the "Steps" section above verbatim (copy them character by character),
   - each step's status is exactly one of: \`done\`, \`skipped\` (deliberately omitted — explain in the text), \`blocked\` (you ran into a blocker — describe it in the text), \`todo\` (still to be done, e.g. ran out of time),
   - \`verdict\` summarizes the whole phase and is one of: \`done\` (everything finished), \`partial\` (something remains, but nothing stops you from continuing), \`blocked\` (you ran into a blocker you can't get around yourself),
   - optional field \`verify\` — a list of things you **could not verify yourself** and that need a human eye (visual UI, UX flow, subjective impression). Whatever can be verified mechanically (curl, tests, build), **verify it yourself** and don't put it in \`verify\`. Each item has \`title\` (what the human should verify, required) and optionally \`detail\` (context — what you did/didn't verify and how). When there is nothing for a human to verify, omit the field.

2) **Free text** below the YAML block — a short summary for the human: what went well, what didn't, what you ran into, open questions. This is where context that wouldn't fit into the YAML status belongs.

The file must start with a YAML block in exactly this form (adjust the statuses and add notes; do not change the step names or \`phase\`; add \`verify\` only when there is something for a human to verify, otherwise omit it):

\`\`\`
---
phase: 10
verdict: done
steps:
  - title: "hotový krok"
    status: done
  - title: "zbývající krok"
    status: done
verify:   # optional — omit it when Claude verified everything itself
  - title: "what the human should verify (a visual/UX thing that can't be done mechanically)"
    detail: "what you did/didn't verify and how"
---

# Phase 10 — report from the auto session

(free text — what went well, what didn't, notes for the human)
\`\`\`

Only **after writing the report** end the session (type /exit or press Ctrl+D). Without a report the user has nothing to move the state from — they then go through it manually via the interactive \`mini done\`.
"
`;

exports[`buildAutoPhasePrompt > inserts discuss notes block when notes are provided 1`] = `
"You are part of a tool that helps the user build a project incrementally.
An **auto session** is in progress — you are to implement the whole phase in one pass.

# Project
# Můj projekt
Stavím nástroj X pro Y.

# Current phase
**Phase 4: Použít poznámky z diskuze**
Goal: auto-prompt vidí discuss notes

Steps (a guide for the work — do not edit them in any file, they only serve as the plan and reference names for the report):
- [todo] načíst notes

# Phase notes (from discussion)
# Fáze 4 — Poznámky

## Záměr
auto má taky vidět diskusi

## Klíčová rozhodnutí
- notes se renderují identicky jako v do/plan promptu

# Your task
Implement all remaining steps so that the phase meets its goal. The steps above are a guide for the work — the order and granularity are up to you, and do not edit the files in \`.mini/state.json\` by hand. The user takes care of moving the phase status and the final step statuses via \`mini done\`, based on the report you write (see below).

Read the files yourself as needed. You work in acceptEdits mode, so you can edit without asking.

If you hit a **real** decision along the way — a concrete alternative weighed and **rejected**, not obvious from the code later — at the end tell the user to run \`/mini:decision\` (before \`/mini:done\`) to record the *why*. Don't write the ADR yourself; most phases have no such crossroads.

On parallelizing tool calls: (1) run fragile/stateful commands on their own — anything touching a server (start/stop, kill, pkill, background jobs) must not share a batch with other work, so a failure or hang is isolated; (2) independent reads and queries can go in parallel — that is safe and saves time; (3) keep dependent steps sequential — when you need one command’s output for the next (e.g. an exact step name), wait for it before continuing.

# Tracking step progress
As soon as you finish one step, mark it done **immediately** (before you start the next one):

\`\`\`
mini do --apply --step-done "<exact step name from the Steps section>"
\`\`\`

Copy the name character by character from the "Steps" section above. If the session crashes, the state will then show how far you got. Write the final report at the end (see below) regardless — tracking progress does not replace it.


# Report at the end of the session
Before you end the session, **write via the Write tool** a report into the file \`.mini/run/phase-004.md\`. The report has two parts:

1) **YAML front matter** with machine-readable statuses. This part is parsed, so the structure must be exact. Rules:
   - the step names in \`steps[].title\` MUST match the names in the "Steps" section above verbatim (copy them character by character),
   - each step's status is exactly one of: \`done\`, \`skipped\` (deliberately omitted — explain in the text), \`blocked\` (you ran into a blocker — describe it in the text), \`todo\` (still to be done, e.g. ran out of time),
   - \`verdict\` summarizes the whole phase and is one of: \`done\` (everything finished), \`partial\` (something remains, but nothing stops you from continuing), \`blocked\` (you ran into a blocker you can't get around yourself),
   - optional field \`verify\` — a list of things you **could not verify yourself** and that need a human eye (visual UI, UX flow, subjective impression). Whatever can be verified mechanically (curl, tests, build), **verify it yourself** and don't put it in \`verify\`. Each item has \`title\` (what the human should verify, required) and optionally \`detail\` (context — what you did/didn't verify and how). When there is nothing for a human to verify, omit the field.

2) **Free text** below the YAML block — a short summary for the human: what went well, what didn't, what you ran into, open questions. This is where context that wouldn't fit into the YAML status belongs.

The file must start with a YAML block in exactly this form (adjust the statuses and add notes; do not change the step names or \`phase\`; add \`verify\` only when there is something for a human to verify, otherwise omit it):

\`\`\`
---
phase: 4
verdict: done
steps:
  - title: "načíst notes"
    status: done
verify:   # optional — omit it when Claude verified everything itself
  - title: "what the human should verify (a visual/UX thing that can't be done mechanically)"
    detail: "what you did/didn't verify and how"
---

# Phase 4 — report from the auto session

(free text — what went well, what didn't, notes for the human)
\`\`\`

Only **after writing the report** end the session (type /exit or press Ctrl+D). Without a report the user has nothing to move the state from — they then go through it manually via the interactive \`mini done\`.
"
`;

exports[`buildAutoPhasePrompt > projekt reference mód: místo inline textu projektu vykreslí odkaz + read-once 1`] = `
"You are part of a tool that helps the user build a project incrementally.
An **auto session** is in progress — you are to implement the whole phase in one pass.

# Project
The project is described in \`.mini/project.md\`. If you already read it in this session (typically during \`/mini:plan\` or at the start of \`auto\`), **do not read it again** — you have it in context. Otherwise read it now via the Read tool.

# Current phase
**Phase 41: Projekt reference**
Goal: do odkazuje na project.md místo inline

Steps (a guide for the work — do not edit them in any file, they only serve as the plan and reference names for the report):
- [todo] krok

# Your task
Implement all remaining steps so that the phase meets its goal. The steps above are a guide for the work — the order and granularity are up to you, and do not edit the files in \`.mini/state.json\` by hand. The user takes care of moving the phase status and the final step statuses via \`mini done\`, based on the report you write (see below).

Read the files yourself as needed. You work in acceptEdits mode, so you can edit without asking.

If you hit a **real** decision along the way — a concrete alternative weighed and **rejected**, not obvious from the code later — at the end tell the user to run \`/mini:decision\` (before \`/mini:done\`) to record the *why*. Don't write the ADR yourself; most phases have no such crossroads.

On parallelizing tool calls: (1) run fragile/stateful commands on their own — anything touching a server (start/stop, kill, pkill, background jobs) must not share a batch with other work, so a failure or hang is isolated; (2) independent reads and queries can go in parallel — that is safe and saves time; (3) keep dependent steps sequential — when you need one command’s output for the next (e.g. an exact step name), wait for it before continuing.

# Tracking step progress
As soon as you finish one step, mark it done **immediately** (before you start the next one):

\`\`\`
mini do --apply --step-done "<exact step name from the Steps section>"
\`\`\`

Copy the name character by character from the "Steps" section above. If the session crashes, the state will then show how far you got. Write the final report at the end (see below) regardless — tracking progress does not replace it.


# Report at the end of the session
Before you end the session, **write via the Write tool** a report into the file \`.mini/run/phase-041.md\`. The report has two parts:

1) **YAML front matter** with machine-readable statuses. This part is parsed, so the structure must be exact. Rules:
   - the step names in \`steps[].title\` MUST match the names in the "Steps" section above verbatim (copy them character by character),
   - each step's status is exactly one of: \`done\`, \`skipped\` (deliberately omitted — explain in the text), \`blocked\` (you ran into a blocker — describe it in the text), \`todo\` (still to be done, e.g. ran out of time),
   - \`verdict\` summarizes the whole phase and is one of: \`done\` (everything finished), \`partial\` (something remains, but nothing stops you from continuing), \`blocked\` (you ran into a blocker you can't get around yourself),
   - optional field \`verify\` — a list of things you **could not verify yourself** and that need a human eye (visual UI, UX flow, subjective impression). Whatever can be verified mechanically (curl, tests, build), **verify it yourself** and don't put it in \`verify\`. Each item has \`title\` (what the human should verify, required) and optionally \`detail\` (context — what you did/didn't verify and how). When there is nothing for a human to verify, omit the field.

2) **Free text** below the YAML block — a short summary for the human: what went well, what didn't, what you ran into, open questions. This is where context that wouldn't fit into the YAML status belongs.

The file must start with a YAML block in exactly this form (adjust the statuses and add notes; do not change the step names or \`phase\`; add \`verify\` only when there is something for a human to verify, otherwise omit it):

\`\`\`
---
phase: 41
verdict: done
steps:
  - title: "krok"
    status: done
verify:   # optional — omit it when Claude verified everything itself
  - title: "what the human should verify (a visual/UX thing that can't be done mechanically)"
    detail: "what you did/didn't verify and how"
---

# Phase 41 — report from the auto session

(free text — what went well, what didn't, notes for the human)
\`\`\`

Only **after writing the report** end the session (type /exit or press Ctrl+D). Without a report the user has nothing to move the state from — they then go through it manually via the interactive \`mini done\`.
"
`;

exports[`buildAutoPhasePrompt > reference mód: místo inline textu vykreslí odkaz + read-once podmínku 1`] = `
"You are part of a tool that helps the user build a project incrementally.
An **auto session** is in progress — you are to implement the whole phase in one pass.

# Project
# Můj projekt
Stavím nástroj X pro Y.

# Current phase
**Phase 40: Reference mód**
Goal: do odkazuje místo inline

Steps (a guide for the work — do not edit them in any file, they only serve as the plan and reference names for the report):
- [todo] krok

# Phase notes (from discussion)
The discussion notes for this phase are in \`.mini/discuss/phase-040.md\`. If you already read them in this session (typically during \`/mini:plan\` or at the start of \`auto\`), **do not read them again** — you have them in context. Otherwise read them now via the Read tool.

# Your task
Implement all remaining steps so that the phase meets its goal. The steps above are a guide for the work — the order and granularity are up to you, and do not edit the files in \`.mini/state.json\` by hand. The user takes care of moving the phase status and the final step statuses via \`mini done\`, based on the report you write (see below).

Read the files yourself as needed. You work in acceptEdits mode, so you can edit without asking.

If you hit a **real** decision along the way — a concrete alternative weighed and **rejected**, not obvious from the code later — at the end tell the user to run \`/mini:decision\` (before \`/mini:done\`) to record the *why*. Don't write the ADR yourself; most phases have no such crossroads.

On parallelizing tool calls: (1) run fragile/stateful commands on their own — anything touching a server (start/stop, kill, pkill, background jobs) must not share a batch with other work, so a failure or hang is isolated; (2) independent reads and queries can go in parallel — that is safe and saves time; (3) keep dependent steps sequential — when you need one command’s output for the next (e.g. an exact step name), wait for it before continuing.

# Tracking step progress
As soon as you finish one step, mark it done **immediately** (before you start the next one):

\`\`\`
mini do --apply --step-done "<exact step name from the Steps section>"
\`\`\`

Copy the name character by character from the "Steps" section above. If the session crashes, the state will then show how far you got. Write the final report at the end (see below) regardless — tracking progress does not replace it.


# Report at the end of the session
Before you end the session, **write via the Write tool** a report into the file \`.mini/run/phase-040.md\`. The report has two parts:

1) **YAML front matter** with machine-readable statuses. This part is parsed, so the structure must be exact. Rules:
   - the step names in \`steps[].title\` MUST match the names in the "Steps" section above verbatim (copy them character by character),
   - each step's status is exactly one of: \`done\`, \`skipped\` (deliberately omitted — explain in the text), \`blocked\` (you ran into a blocker — describe it in the text), \`todo\` (still to be done, e.g. ran out of time),
   - \`verdict\` summarizes the whole phase and is one of: \`done\` (everything finished), \`partial\` (something remains, but nothing stops you from continuing), \`blocked\` (you ran into a blocker you can't get around yourself),
   - optional field \`verify\` — a list of things you **could not verify yourself** and that need a human eye (visual UI, UX flow, subjective impression). Whatever can be verified mechanically (curl, tests, build), **verify it yourself** and don't put it in \`verify\`. Each item has \`title\` (what the human should verify, required) and optionally \`detail\` (context — what you did/didn't verify and how). When there is nothing for a human to verify, omit the field.

2) **Free text** below the YAML block — a short summary for the human: what went well, what didn't, what you ran into, open questions. This is where context that wouldn't fit into the YAML status belongs.

The file must start with a YAML block in exactly this form (adjust the statuses and add notes; do not change the step names or \`phase\`; add \`verify\` only when there is something for a human to verify, otherwise omit it):

\`\`\`
---
phase: 40
verdict: done
steps:
  - title: "krok"
    status: done
verify:   # optional — omit it when Claude verified everything itself
  - title: "what the human should verify (a visual/UX thing that can't be done mechanically)"
    detail: "what you did/didn't verify and how"
---

# Phase 40 — report from the auto session

(free text — what went well, what didn't, notes for the human)
\`\`\`

Only **after writing the report** end the session (type /exit or press Ctrl+D). Without a report the user has nothing to move the state from — they then go through it manually via the interactive \`mini done\`.
"
`;

exports[`buildAutoPhasePrompt > renders a phase with mixed-status steps (first iteration, no notes, no retry) 1`] = `
"You are part of a tool that helps the user build a project incrementally.
An **auto session** is in progress — you are to implement the whole phase in one pass.

# Project
# Můj projekt
Stavím nástroj X pro Y.

# Current phase
**Phase 9: Jeden průchod Claude na fázi**
Goal: auto pustí celou fázi v jednom Claude session

Steps (a guide for the work — do not edit them in any file, they only serve as the plan and reference names for the report):
- [done] Prompt builder pro celou fázi
- [done] Typy reportu a .mini/run/ adresář
- [in progress] auto.ts jeden průchod + retry smyčka
- [todo] Snapshot testy auto-promptu
- [skipped] starý nápad

# Your task
Implement all remaining steps so that the phase meets its goal. The steps above are a guide for the work — the order and granularity are up to you, and do not edit the files in \`.mini/state.json\` by hand. The user takes care of moving the phase status and the final step statuses via \`mini done\`, based on the report you write (see below).

Read the files yourself as needed. You work in acceptEdits mode, so you can edit without asking.

If you hit a **real** decision along the way — a concrete alternative weighed and **rejected**, not obvious from the code later — at the end tell the user to run \`/mini:decision\` (before \`/mini:done\`) to record the *why*. Don't write the ADR yourself; most phases have no such crossroads.

On parallelizing tool calls: (1) run fragile/stateful commands on their own — anything touching a server (start/stop, kill, pkill, background jobs) must not share a batch with other work, so a failure or hang is isolated; (2) independent reads and queries can go in parallel — that is safe and saves time; (3) keep dependent steps sequential — when you need one command’s output for the next (e.g. an exact step name), wait for it before continuing.

# Tracking step progress
As soon as you finish one step, mark it done **immediately** (before you start the next one):

\`\`\`
mini do --apply --step-done "<exact step name from the Steps section>"
\`\`\`

Copy the name character by character from the "Steps" section above. If the session crashes, the state will then show how far you got. Write the final report at the end (see below) regardless — tracking progress does not replace it.


# Report at the end of the session
Before you end the session, **write via the Write tool** a report into the file \`.mini/run/phase-009.md\`. The report has two parts:

1) **YAML front matter** with machine-readable statuses. This part is parsed, so the structure must be exact. Rules:
   - the step names in \`steps[].title\` MUST match the names in the "Steps" section above verbatim (copy them character by character),
   - each step's status is exactly one of: \`done\`, \`skipped\` (deliberately omitted — explain in the text), \`blocked\` (you ran into a blocker — describe it in the text), \`todo\` (still to be done, e.g. ran out of time),
   - \`verdict\` summarizes the whole phase and is one of: \`done\` (everything finished), \`partial\` (something remains, but nothing stops you from continuing), \`blocked\` (you ran into a blocker you can't get around yourself),
   - optional field \`verify\` — a list of things you **could not verify yourself** and that need a human eye (visual UI, UX flow, subjective impression). Whatever can be verified mechanically (curl, tests, build), **verify it yourself** and don't put it in \`verify\`. Each item has \`title\` (what the human should verify, required) and optionally \`detail\` (context — what you did/didn't verify and how). When there is nothing for a human to verify, omit the field.

2) **Free text** below the YAML block — a short summary for the human: what went well, what didn't, what you ran into, open questions. This is where context that wouldn't fit into the YAML status belongs.

The file must start with a YAML block in exactly this form (adjust the statuses and add notes; do not change the step names or \`phase\`; add \`verify\` only when there is something for a human to verify, otherwise omit it):

\`\`\`
---
phase: 9
verdict: done
steps:
  - title: "Prompt builder pro celou fázi"
    status: done
  - title: "Typy reportu a .mini/run/ adresář"
    status: done
  - title: "auto.ts jeden průchod + retry smyčka"
    status: done
  - title: "Snapshot testy auto-promptu"
    status: done
  - title: "starý nápad"
    status: done
verify:   # optional — omit it when Claude verified everything itself
  - title: "what the human should verify (a visual/UX thing that can't be done mechanically)"
    detail: "what you did/didn't verify and how"
---

# Phase 9 — report from the auto session

(free text — what went well, what didn't, notes for the human)
\`\`\`

Only **after writing the report** end the session (type /exit or press Ctrl+D). Without a report the user has nothing to move the state from — they then go through it manually via the interactive \`mini done\`.
"
`;

exports[`buildAutoPhasePrompt > renders a phase without steps (works on whole phase, empty YAML steps) 1`] = `
"You are part of a tool that helps the user build a project incrementally.
An **auto session** is in progress — you are to implement the whole phase in one pass.

# Project
# Můj projekt
Stavím nástroj X pro Y.

# Current phase
**Phase 1: Bootstrap**
Goal: CLI vrací --version

(The phase is not broken down into steps — work on the whole phase at once.)

# Your task
Implement all remaining steps so that the phase meets its goal. The steps above are a guide for the work — the order and granularity are up to you, and do not edit the files in \`.mini/state.json\` by hand. The user takes care of moving the phase status and the final step statuses via \`mini done\`, based on the report you write (see below).

Read the files yourself as needed. You work in acceptEdits mode, so you can edit without asking.

If you hit a **real** decision along the way — a concrete alternative weighed and **rejected**, not obvious from the code later — at the end tell the user to run \`/mini:decision\` (before \`/mini:done\`) to record the *why*. Don't write the ADR yourself; most phases have no such crossroads.

On parallelizing tool calls: (1) run fragile/stateful commands on their own — anything touching a server (start/stop, kill, pkill, background jobs) must not share a batch with other work, so a failure or hang is isolated; (2) independent reads and queries can go in parallel — that is safe and saves time; (3) keep dependent steps sequential — when you need one command’s output for the next (e.g. an exact step name), wait for it before continuing.


# Report at the end of the session
Before you end the session, **write via the Write tool** a report into the file \`.mini/run/phase-001.md\`. The report has two parts:

1) **YAML front matter** with machine-readable statuses. This part is parsed, so the structure must be exact. Rules:
   - the step names in \`steps[].title\` MUST match the names in the "Steps" section above verbatim (copy them character by character),
   - each step's status is exactly one of: \`done\`, \`skipped\` (deliberately omitted — explain in the text), \`blocked\` (you ran into a blocker — describe it in the text), \`todo\` (still to be done, e.g. ran out of time),
   - \`verdict\` summarizes the whole phase and is one of: \`done\` (everything finished), \`partial\` (something remains, but nothing stops you from continuing), \`blocked\` (you ran into a blocker you can't get around yourself),
   - optional field \`verify\` — a list of things you **could not verify yourself** and that need a human eye (visual UI, UX flow, subjective impression). Whatever can be verified mechanically (curl, tests, build), **verify it yourself** and don't put it in \`verify\`. Each item has \`title\` (what the human should verify, required) and optionally \`detail\` (context — what you did/didn't verify and how). When there is nothing for a human to verify, omit the field.

2) **Free text** below the YAML block — a short summary for the human: what went well, what didn't, what you ran into, open questions. This is where context that wouldn't fit into the YAML status belongs.

The file must start with a YAML block in exactly this form (adjust the statuses and add notes; do not change the step names or \`phase\`; add \`verify\` only when there is something for a human to verify, otherwise omit it):

\`\`\`
---
phase: 1
verdict: done
steps:
  []  # the phase has no steps — leave an empty list
verify:   # optional — omit it when Claude verified everything itself
  - title: "what the human should verify (a visual/UX thing that can't be done mechanically)"
    detail: "what you did/didn't verify and how"
---

# Phase 1 — report from the auto session

(free text — what went well, what didn't, notes for the human)
\`\`\`

Only **after writing the report** end the session (type /exit or press Ctrl+D). Without a report the user has nothing to move the state from — they then go through it manually via the interactive \`mini done\`.
"
`;

exports[`buildAutoPhasePrompt > renders retry block with iteration number and previous report path 1`] = `
"You are part of a tool that helps the user build a project incrementally.
An **auto session** is in progress — you are to implement the whole phase in one pass.

# Project
# Můj projekt
Stavím nástroj X pro Y.

# Retry (iteration 2)
In one of the previous iterations not all steps were finished. What is already done (or skipped) you'll see in the "Steps" section below — focus on the remaining ones. You'll find the previous report in \`.mini/run/phase-5.prev.md\` — read it so you know where the previous attempt ended and what it ran into. The new report (see below) overwrites the previous one.

# Current phase
**Phase 5: Retry kontext**
Goal: druhý pokus dostane info o předchozím

Steps (a guide for the work — do not edit them in any file, they only serve as the plan and reference names for the report):
- [done] krok A
- [todo] krok B

# Your task
Implement all remaining steps so that the phase meets its goal. The steps above are a guide for the work — the order and granularity are up to you, and do not edit the files in \`.mini/state.json\` by hand. The user takes care of moving the phase status and the final step statuses via \`mini done\`, based on the report you write (see below).

Read the files yourself as needed. You work in acceptEdits mode, so you can edit without asking.

If you hit a **real** decision along the way — a concrete alternative weighed and **rejected**, not obvious from the code later — at the end tell the user to run \`/mini:decision\` (before \`/mini:done\`) to record the *why*. Don't write the ADR yourself; most phases have no such crossroads.

On parallelizing tool calls: (1) run fragile/stateful commands on their own — anything touching a server (start/stop, kill, pkill, background jobs) must not share a batch with other work, so a failure or hang is isolated; (2) independent reads and queries can go in parallel — that is safe and saves time; (3) keep dependent steps sequential — when you need one command’s output for the next (e.g. an exact step name), wait for it before continuing.

# Tracking step progress
As soon as you finish one step, mark it done **immediately** (before you start the next one):

\`\`\`
mini do --apply --step-done "<exact step name from the Steps section>"
\`\`\`

Copy the name character by character from the "Steps" section above. If the session crashes, the state will then show how far you got. Write the final report at the end (see below) regardless — tracking progress does not replace it.


# Report at the end of the session
Before you end the session, **write via the Write tool** a report into the file \`.mini/run/phase-005.md\`. The report has two parts:

1) **YAML front matter** with machine-readable statuses. This part is parsed, so the structure must be exact. Rules:
   - the step names in \`steps[].title\` MUST match the names in the "Steps" section above verbatim (copy them character by character),
   - each step's status is exactly one of: \`done\`, \`skipped\` (deliberately omitted — explain in the text), \`blocked\` (you ran into a blocker — describe it in the text), \`todo\` (still to be done, e.g. ran out of time),
   - \`verdict\` summarizes the whole phase and is one of: \`done\` (everything finished), \`partial\` (something remains, but nothing stops you from continuing), \`blocked\` (you ran into a blocker you can't get around yourself),
   - optional field \`verify\` — a list of things you **could not verify yourself** and that need a human eye (visual UI, UX flow, subjective impression). Whatever can be verified mechanically (curl, tests, build), **verify it yourself** and don't put it in \`verify\`. Each item has \`title\` (what the human should verify, required) and optionally \`detail\` (context — what you did/didn't verify and how). When there is nothing for a human to verify, omit the field.

2) **Free text** below the YAML block — a short summary for the human: what went well, what didn't, what you ran into, open questions. This is where context that wouldn't fit into the YAML status belongs.

The file must start with a YAML block in exactly this form (adjust the statuses and add notes; do not change the step names or \`phase\`; add \`verify\` only when there is something for a human to verify, otherwise omit it):

\`\`\`
---
phase: 5
verdict: done
steps:
  - title: "krok A"
    status: done
  - title: "krok B"
    status: done
verify:   # optional — omit it when Claude verified everything itself
  - title: "what the human should verify (a visual/UX thing that can't be done mechanically)"
    detail: "what you did/didn't verify and how"
---

# Phase 5 — report from the auto session

(free text — what went well, what didn't, notes for the human)
\`\`\`

Only **after writing the report** end the session (type /exit or press Ctrl+D). Without a report the user has nothing to move the state from — they then go through it manually via the interactive \`mini done\`.
"
`;

exports[`buildAutoPhasePrompt > renders step detail on an indented line below the title (only when present) 1`] = `
"You are part of a tool that helps the user build a project incrementally.
An **auto session** is in progress — you are to implement the whole phase in one pass.

# Project
# Můj projekt
Stavím nástroj X pro Y.

# Current phase
**Phase 9: Detail v krocích**
Goal: detail se vykreslí pod title

Steps (a guide for the work — do not edit them in any file, they only serve as the plan and reference names for the report):
- [done] Prompt builder pro celou fázi
    buildAutoPhasePrompt vrací prompt s YAML reportem; pokryto snapshotem
- [todo] Bez detailu

# Your task
Implement all remaining steps so that the phase meets its goal. The steps above are a guide for the work — the order and granularity are up to you, and do not edit the files in \`.mini/state.json\` by hand. The user takes care of moving the phase status and the final step statuses via \`mini done\`, based on the report you write (see below).

Read the files yourself as needed. You work in acceptEdits mode, so you can edit without asking.

If you hit a **real** decision along the way — a concrete alternative weighed and **rejected**, not obvious from the code later — at the end tell the user to run \`/mini:decision\` (before \`/mini:done\`) to record the *why*. Don't write the ADR yourself; most phases have no such crossroads.

On parallelizing tool calls: (1) run fragile/stateful commands on their own — anything touching a server (start/stop, kill, pkill, background jobs) must not share a batch with other work, so a failure or hang is isolated; (2) independent reads and queries can go in parallel — that is safe and saves time; (3) keep dependent steps sequential — when you need one command’s output for the next (e.g. an exact step name), wait for it before continuing.

# Tracking step progress
As soon as you finish one step, mark it done **immediately** (before you start the next one):

\`\`\`
mini do --apply --step-done "<exact step name from the Steps section>"
\`\`\`

Copy the name character by character from the "Steps" section above. If the session crashes, the state will then show how far you got. Write the final report at the end (see below) regardless — tracking progress does not replace it.


# Report at the end of the session
Before you end the session, **write via the Write tool** a report into the file \`.mini/run/phase-009.md\`. The report has two parts:

1) **YAML front matter** with machine-readable statuses. This part is parsed, so the structure must be exact. Rules:
   - the step names in \`steps[].title\` MUST match the names in the "Steps" section above verbatim (copy them character by character),
   - each step's status is exactly one of: \`done\`, \`skipped\` (deliberately omitted — explain in the text), \`blocked\` (you ran into a blocker — describe it in the text), \`todo\` (still to be done, e.g. ran out of time),
   - \`verdict\` summarizes the whole phase and is one of: \`done\` (everything finished), \`partial\` (something remains, but nothing stops you from continuing), \`blocked\` (you ran into a blocker you can't get around yourself),
   - optional field \`verify\` — a list of things you **could not verify yourself** and that need a human eye (visual UI, UX flow, subjective impression). Whatever can be verified mechanically (curl, tests, build), **verify it yourself** and don't put it in \`verify\`. Each item has \`title\` (what the human should verify, required) and optionally \`detail\` (context — what you did/didn't verify and how). When there is nothing for a human to verify, omit the field.

2) **Free text** below the YAML block — a short summary for the human: what went well, what didn't, what you ran into, open questions. This is where context that wouldn't fit into the YAML status belongs.

The file must start with a YAML block in exactly this form (adjust the statuses and add notes; do not change the step names or \`phase\`; add \`verify\` only when there is something for a human to verify, otherwise omit it):

\`\`\`
---
phase: 9
verdict: done
steps:
  - title: "Prompt builder pro celou fázi"
    status: done
  - title: "Bez detailu"
    status: done
verify:   # optional — omit it when Claude verified everything itself
  - title: "what the human should verify (a visual/UX thing that can't be done mechanically)"
    detail: "what you did/didn't verify and how"
---

# Phase 9 — report from the auto session

(free text — what went well, what didn't, notes for the human)
\`\`\`

Only **after writing the report** end the session (type /exit or press Ctrl+D). Without a report the user has nothing to move the state from — they then go through it manually via the interactive \`mini done\`.
"
`;
